src/objects/Audit_Trail__c.object
<CustomObject>
    <description>Log of the changes done for objects which History Tracking is not enabled in SFDC.</description>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CampaignMember__c</fullName>
        <label>CampaignMember</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Audit Trails</relationshipLabel>
        <relationshipName>Audit_Trails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Created_By_EP_Transaction__c</fullName>
        <description>The integration layer (EP) needs this field for defect handling and debugging.</description>
        <label>Created By EP Transaction</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Audit Trails</relationshipLabel>
        <relationshipName>Audit_Trails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_of_Change__c</fullName>
        <label>Date of Change</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MD__c</fullName>
        <label>Market Discriminator</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Updated_By_EP_Transactions__c</fullName>
        <description>The integration layer (EP) needs this field for defect handling and debugging.</description>
        <label>Updated By EP Transactions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Audit_Trails</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Audit Trail</label>
    <nameField>
        <label>Audit Trail</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Audit Trails</pluralLabel>
    <recordTypes>
        <fullName>Account</fullName>
        <active>true</active>
        <description>Audit trail record for Account object.</description>
        <label>Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Campaign</fullName>
        <active>true</active>
        <description>Audit trail record for Campaign object.</description>
        <label>Campaign</label>
    </recordTypes>
    <recordTypes>
        <fullName>CampaignMember</fullName>
        <active>true</active>
        <description>Audit trail record for CampaignMember object.</description>
        <label>CampaignMember</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>